--- a/superMangular/package.json
+++ b/superMangular/package.json
@@ -3,17 +3,21 @@
     "version": "0.0.0",
     "scripts": {
         "ng": "ng",
-        "start": "ng serve",
+        "start": "node server.js",
         "build": "ng build",
         "watch": "ng build --watch --configuration development",
-        "test": "ng test"
+        "test": "ng test",
+        "heroku-postbuild": "ng build — prod"
     },
+    "engines": { "node": "14.18.1", "npm": "6.14.15" },
     "private": true,
     "dependencies": {
         "@angular/animations": "~12.2.0",
         "@angular/cdk": "^12.2.13",
+        "@angular/cli": "~12.2.9",
         "@angular/common": "~12.2.0",
         "@angular/compiler": "~12.2.0",
+        "@angular/compiler-cli": "~12.2.0",
         "@angular/core": "~12.2.0",
         "@angular/forms": "~12.2.0",
         "@angular/material": "^12.2.13",
@@ -21,13 +25,13 @@
         "@angular/platform-browser-dynamic": "~12.2.0",
         "@angular/router": "~12.2.0",
         "angular-bootstrap-md": "^12.1.0",
+        "express": "^4.17.2",
         "material": "^0.4.3",
+        "path": "^0.12.7",
         "rxjs": "~6.6.0",
         "tslib": "^2.3.0",
-        "zone.js": "~0.11.4",
-        "@angular/cli": "~12.2.9",
-        "@angular/compiler-cli": "~12.2.0",
-        "typescript": "~4.3.5"
+        "typescript": "~4.3.5",
+        "zone.js": "~0.11.4"
     },
     "devDependencies": {
         "@angular-devkit/build-angular": "~12.2.9",
