--- a/superMangular/package.json
+++ b/superMangular/package.json
@@ -7,7 +7,7 @@
         "build": "ng build",
         "watch": "ng build --watch --configuration development",
         "test": "ng test",
-        "heroku-postbuild": "ng build — prod"
+        "heroku-postbuild": "ng build - prod"
     },
     "engines": { "node": "14.18.1", "npm": "6.14.15" },
     "private": true,
