--- a/superMangular/package.json
+++ b/superMangular/package.json
@@ -7,17 +7,21 @@
         "build": "ng build",
         "watch": "ng build --watch --configuration development",
         "test": "ng test",
-        "heroku-postbuild": "ng build --prod"
+        "heroku-postbuild": "ng build --prod",
+        "postinstall": "ng build --aot -prod"
     },
-    "engines": { "node": "14.18.1", "npm": "6.14.15" },
+    "engines": {
+        "node": "14.18.1",
+        "npm": "6.14.15"
+    },
     "private": true,
     "dependencies": {
+        "@angular/cli": "^13.1.2",
+        "@angular/compiler-cli": "^12.2.15",
         "@angular/animations": "~12.2.0",
         "@angular/cdk": "^12.2.13",
-        "@angular/cli": "~12.2.9",
         "@angular/common": "~12.2.0",
         "@angular/compiler": "~12.2.0",
-        "@angular/compiler-cli": "~12.2.0",
         "@angular/core": "~12.2.0",
         "@angular/forms": "~12.2.0",
         "@angular/material": "^12.2.13",
@@ -35,10 +39,11 @@
     },
     "devDependencies": {
         "@angular-devkit/build-angular": "~12.2.9",
-        "@angular/cli": "~12.2.9",
-        "@angular/compiler-cli": "~12.2.0",
+        "@angular/cli": "^13.1.2",
+        "@angular/compiler-cli": "^12.2.15",
         "@types/jasmine": "~3.8.0",
         "@types/node": "^12.11.1",
+        "enhanced-resolve": "^3.3.0",
         "jasmine-core": "~3.8.0",
         "karma": "~6.3.0",
         "karma-chrome-launcher": "~3.1.0",
