--- a/superMangular/package.json
+++ b/superMangular/package.json
@@ -8,7 +8,7 @@
         "watch": "ng build --watch --configuration development",
         "test": "ng test",
         "heroku-postbuild": "ng build",
-        "postinstall": "ng build"
+        "postinstall": "npm cache clean"
     },
     "engines": {
         "node": "14.18.1",
