--- a/superMangular/package.json
+++ b/superMangular/package.json
@@ -25,6 +25,7 @@
         "@angular/router": "~12.2.0",
         "angular-bootstrap-md": "^12.1.0",
         "express": "^4.17.2",
+        "express-http-proxy": "^1.6.3",
         "material": "^0.4.3",
         "rxjs": "~6.6.0",
         "tslib": "^2.3.0",
